[gd_scene load_steps=4 format=3 uid="uid://gynfq7upfxek"]

[ext_resource type="Script" path="res://scripts/playerController.gd" id="1_c4xo6"]
[ext_resource type="FontFile" uid="uid://b0mmbac6tyew6" path="res://Kenney Mini Square.ttf" id="2_fprvs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2gw7"]
size = Vector2(16, 16)

[node name="playerAnchor" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_c4xo6")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(0, -48)

[node name="playerBody" type="ColorRect" parent="CharacterBody2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.65098, 1, 0.517647, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_p2gw7")

[node name="wallCast" type="RayCast2D" parent="CharacterBody2D"]
target_position = Vector2(16, 0)
collide_with_areas = true

[node name="topColliders" type="Node2D" parent="CharacterBody2D"]

[node name="ceillingCast" type="RayCast2D" parent="CharacterBody2D/topColliders"]
position = Vector2(8, 0)
target_position = Vector2(0, -16)
collide_with_areas = true
collide_with_bodies = false

[node name="ceillingCast2" type="RayCast2D" parent="CharacterBody2D/topColliders"]
position = Vector2(-8, 0)
target_position = Vector2(0, -16.06)
collide_with_areas = true
collide_with_bodies = false

[node name="botColliders" type="Node2D" parent="CharacterBody2D"]

[node name="floorCheck" type="RayCast2D" parent="CharacterBody2D/botColliders"]
position = Vector2(-8, 0)
target_position = Vector2(0, 14)
collide_with_areas = true
collide_with_bodies = false

[node name="floorCheck2" type="RayCast2D" parent="CharacterBody2D/botColliders"]
position = Vector2(8, 0)
target_position = Vector2(0, 14)
collide_with_areas = true
collide_with_bodies = false

[node name="RichTextLabel" type="RichTextLabel" parent="CharacterBody2D"]
z_index = 2
texture_filter = 1
offset_left = -20.0
offset_top = -56.0
offset_right = 20.0
offset_bottom = -16.0
scale = Vector2(0.991453, 1)
theme_override_colors/default_color = Color(0, 1, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_fprvs")
